--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Landing Page</title>
 </head>
 <body>
+
+    <div class="header"></div>
+
+    <div class="hero">
+
+        <div class="hero-text"></div>
+
+        <div class="hero-image"></div>
+
+    </div>
+
+    <div class="content">
+        <div class="character-cards"></div>
+
+        <div class="quote"></div>
+
+        <div class="cta"></div>
+    </div>
+
+    <div class="footer"></div>
     
 </body>
 </html>
