Create and Modify navbar css

--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="header">
+      <div class="navbar">
+        <div class="logo">
+            <p>The Jedi Order</p>
+        </div>
 
-    <div class="header"></div>
+        <div class="header-links">
+            <ul>
+                <li><a href="#characters">The Jedi Council</a></li>
+                <li><a href="#quote">Yoda's Advice</a></li>
+                <li><a href="#cta">Wanna Join ?</a></li>    
+            </ul>
+        </div>
+      </div>
 
-    <div class="hero">
-
+      <div class="hero">
         <div class="hero-text"></div>
 
         <div class="hero-image"></div>
-
+      </div>
     </div>
 
     <div class="content">
-        <div class="character-cards"></div>
+      <div class="character-cards" id="characters"></div>
 
-        <div class="quote"></div>
+      <div class="quote" id="quote"></div>
 
-        <div class="cta"></div>
+      <div class="cta" id="cta"></div>
     </div>
 
     <div class="footer"></div>
-    
-</body>
+  </body>
 </html>
