--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
       </div>
 
       <div class="hero">
-        <div class="hero-text"></div>
+        <div class="hero-text">
+            <h1>We are One With the Force</h1>
+            <p>The Jedi Order is fighting against the dark side of the galaxy
+                and the sith. Join us and become a Jedi.
+            </p>
+            <button>Join the Order</button>
+        </div>
 
-        <div class="hero-image"></div>
+        <div class="hero-image">
+            <img src="" alt="">
+        </div>
       </div>
     </div>
 
