Add header content and style it

--- a/index.html
+++ b/index.html
@@ -28,17 +28,45 @@
             <p>The Jedi Order is fighting against the dark side of the galaxy
                 and the sith. Join us and become a Jedi.
             </p>
-            <button>Join the Order</button>
+            <button> <a href="#cta">Join the Order !</a></button>
         </div>
 
         <div class="hero-image">
-            <img src="" alt="">
+            <img src="images/hero.jpg" alt="The Jedi Order">
         </div>
       </div>
     </div>
 
     <div class="content">
-      <div class="character-cards" id="characters"></div>
+        <div class="heading">
+            <h1>The Jedi Council</h1>
+        </div>
+
+      <div class="character-cards" id="characters">
+        <div class="character-card">
+            <img src="images/yoda.jpg" alt="Yoda">
+            <h2>Yoda</h2>
+            <p>The Grandmaster of the Jedi Council</p>
+        </div>
+
+        <div class="character-card">
+            <img src="images/yoda.jpg" alt="Yoda">
+            <h2>Yoda</h2>
+            <p>The Grandmaster of the Jedi Council</p>
+        </div>
+
+        <div class="character-card">
+            <img src="images/yoda.jpg" alt="Yoda">
+            <h2>Yoda</h2>
+            <p>The Grandmaster of the Jedi Council</p>
+        </div>
+
+        <div class="character-card">
+            <img src="images/yoda.jpg" alt="Yoda">
+            <h2>Yoda</h2>
+            <p>The Grandmaster of the Jedi Council</p>
+        </div>
+      </div>
 
       <div class="quote" id="quote"></div>
 
