Complete character-cards section styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="content">
         <div class="heading">
-            <h1>The Jedi Council</h1>
+            <h1>Yoda's Main Lineage</h1>
         </div>
 
       <div class="character-cards" id="characters">
@@ -50,21 +50,33 @@
         </div>
 
         <div class="character-card">
-            <img src="images/yoda.jpg" alt="Yoda">
-            <h2>Yoda</h2>
-            <p>The Grandmaster of the Jedi Council</p>
+            <img src="images/qui-gon.jpg" alt="Yoda">
+            <h2>Qui-Gon Jinn</h2>
+            <p>"The Maverick" Jedi</p>
         </div>
 
         <div class="character-card">
-            <img src="images/yoda.jpg" alt="Yoda">
-            <h2>Yoda</h2>
-            <p>The Grandmaster of the Jedi Council</p>
+            <img src="images/kenobi.jpg" alt="Yoda">
+            <h2>Obi-Wan Kenobi</h2>
+            <p>"The Negotiator"</p>
         </div>
 
         <div class="character-card">
-            <img src="images/yoda.jpg" alt="Yoda">
-            <h2>Yoda</h2>
-            <p>The Grandmaster of the Jedi Council</p>
+            <img src="images/Skywalker.jpeg" alt="Yoda">
+            <h2>Anakin Skywalker</h2>
+            <p>The Chosen One</p>
+        </div>
+
+        <div class="character-card">
+            <img src="images/ahsoka.jpg" alt="Yoda">
+            <h2>Ahsoka Tano</h2>
+            <p>"Fulcram"</p>
+        </div>
+
+        <div class="character-card">
+            <img src="images/dooku.jpg" alt="Yoda">
+            <h2>Count Dooku</h2>
+            <p>20th of the lost twenty</p>
         </div>
       </div>
 
