Complete quote section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
         </div>
       </div>
 
-      <div class="quote" id="quote"></div>
+      <div class="quote" id="quote">
+        <p class="quote-text">
+            “Fear is the path to the dark side.
+            Fear leads to anger. 
+            Anger leads to hate. Hate leads to suffering.” <b> - Yoda, Grandmaster of the Jedi Council</b>
+        </p>
+      </div>
 
       <div class="cta" id="cta"></div>
     </div>
