Finish cta section and cta card

--- a/index.html
+++ b/index.html
@@ -88,7 +88,21 @@
         </p>
       </div>
 
-      <div class="cta" id="cta"></div>
+      <div class="cta" id="cta">
+        <div class="cta-card">
+
+            <div class="cta-text">
+                <h1>Join the Jedi Order</h1>
+                <p>Get ready to become a Jedi.</p>
+            </div>
+            
+
+            <div class="cta-button">
+                <button> <a href="#cta">Join the Order !</a></button>
+            </div>
+            
+        </div>
+      </div>
     </div>
 
     <div class="footer"></div>
