Complete footer section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
       </div>
     </div>
 
-    <div class="footer"></div>
+    <div class="footer">
+        <p>dreadlord-sedai © The Jedi Order 2024</p>
+    </div>
   </body>
 </html>
