Add id to content section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="content">
-        <div class="heading">
+        <div class="heading" id="characters">
             <h1>Yoda's Main Lineage</h1>
         </div>
 
