Change hero image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="hero-image">
-            <img src="images/hero.jpg" alt="The Jedi Order">
+            <img src="images/hero.png" alt="The Jedi Order">
         </div>
       </div>
     </div>
